Fixed padding to #main for name ot show correctly on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,8 @@ h2{
 }
 
 #main{
-  padding-top: 25px;
-  padding-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 #nav{
